--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,29 @@
 /**index.wxss**/
 .slide-image{
   width:100%;
-  height:280rpx;
+  height:100%;
+}
+.main{
+  width: 100%;
+  /* background-color: antiquewhite; */
+  height: 100%;
+  display:flex;
+  flex-direction: column;
 }
 .btn_op1{
   text-align: center;
-  font-size:14px;
+  font-size:20px;
   color:#FF9C35;
   padding: 5px 20px;
   border:1px solid #FF9C35;
   border-radius: 25px;
   width: 100px;
   z-index: 10;
+
 }
 .btn_op2{
   text-align: center;
-  font-size:14px;
+  font-size:20px;
   color:#B6D9A9;
   padding: 5px 20px;
   border:1px solid #B6D9A9;
@@ -24,38 +32,29 @@
 }
 .btn-bar{
   display: flex;
-  margin-top:20px;
+  /* margin-top:20px; */
+  height:200rpx;
+  /* margin-left: 100px; */
+  margin-top: 15px;
 }
 .btn-block{
   width: 50%;
-  /* height:100%; */
+  height:100%;
   display: flex;
   justify-content:center;
 }
 .ad-box{
-  margin-top:30px;
+  /* margin-top:30px; */
   width: 100%;
  text-align: center;
+ height:400rpx
+ 
 }
 .image_ad{
-  width: 95%;
-  height:370rpx;
+  width: 100%;
+  height:100%;
 }
-.scroll-box{
-  display:flex;
-  white-space: nowrap;
-  width:95%
-}
-.bottom-box{
-  margin-top:40rpx;
-  display: flex;
-  justify-content:center;
-}
-.bottom-image{
-  width:300rpx;
-  height:170rpx
-}
-.slide-inline-box{
-  display:inline-block;
-  margin-right:10px;
+
+.swiper{
+  height:400rpx
 }
