--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -12,13 +12,13 @@
 .list-left-menu-box-unselect{
   padding:10rpx;
   border-bottom:1px solid #E3E3E3;
-  height:72rpx;
+  height:90rpx;
   color: #6C6C6C;
   background:#F9F9F9;
 }
 .list-left-menu-box-selected{
   padding:10rpx;
-  height:72rpx;
+  height:90rpx;
   color: #FF9C35;
   border-left:3px solid #FF9C35;
   background:white;
@@ -34,6 +34,7 @@
 .list-menu-name{
   text-align: center;
   margin-top:14rpx;
+  font-size:32rpx;
 }
 .list-image-box{
   width:160rpx;
@@ -51,7 +52,7 @@
 }
 .issue-name{
   width:200px;
-  font-size:30rpx;
+  font-size:40rpx;
   margin-top:20rpx;
 }
 .plus-icon{
@@ -149,20 +150,22 @@
 }
 
 .select-line-nav{
-  font-size:12px;
+  font-size:16px;
   margin-left:5px;
   margin-top:10px;
   color:#ABABAB;
+  height:80rpx;
 }
 
 .select-tab{
   padding:5px 7px;
   border:1px solid #ABABAB;
-  font-size:12px;
+  font-size:16px;
   border-radius:5px;
   margin:5px;
   color:#ABABAB;
   z-index:1002;
+  width:140rpx;
 }
 .select-active{
   color:#FF9C35;
@@ -179,10 +182,12 @@
 .btn-putIn{
   height:40px;
   width:100px;
-  font-size:14px;
+  font-size:20px;
   background:#FF9C35;
   color:white;
   margin-right:20px;
+  line-height:40px;
+  /* font center */
 }
 
 
@@ -243,4 +248,7 @@
   color:#FFF7EC;
   font-size:12px;
   text-align:center;
+}
+.taste{
+  height:150rpx;
 }
