--- a/pages/order/detail/detail.wxml
+++ b/pages/order/detail/detail.wxml
@@ -4,25 +4,20 @@
     <view class="card-box">
       <view class="card-fetch">
         <view class="card-left-bar">
-          <label>取</label>
-          <label>餐</label>
-          <label>号</label>
+          <label>Ticket</label>
         </view>
       </view>
       <view>
         <view class='go-top-10'>
           <label class='number-card'>C097</label>
-          <label class='statu-card'>制作中</label>
-        </view>
-        <view class='note-card'>
-          饮品制作中,尽快为你服务
+          <label class='statu-card'>Inproduction</label>
         </view>
       </view>
     </view>
   </view>
-  <!-- 订单详情 -->
+  <!-- Order Detail -->
   <view class='order-info'>
-    <view class='order-info-title'>订单详情</view>
+    <view class='order-info-title'>Detail</view>
     <view class='cart-list-box' wx:for="{{cartList}}" wx:key="unique">
       <view class='list-info'>
         <view>{{item.name}}</view>
@@ -31,28 +26,28 @@
       <view style='width:50%;padding:10px;'>
         <view style='float:right'>
           <view style='color:#A3A3A3'>x {{item.number}}</view>
-          <view>¥ {{item.sum}}.00</view>
+          <view>$ {{item.sum}}.00</view>
         </view>
       </view>
     </view>
 
     <view class='order-sum'>
-      <label>总计 </label>
-      <label class='order-sum-number activity-color'>¥ {{sumMonney-cutMonney}}</label>
+      <label>Sum </label>
+      <label class='order-sum-number activity-color'>$ {{sumMonney-cutMonney}}</label>
     </view>
   </view>
   <view class='order-info'>
     <!-- 本应动态请求，在此写死 -->
-    <view class='order-info-title'>订单信息</view>
-    <view class='order-info-title flex-display' >订单号码
+    <view class='order-info-title'>Detail</view>
+    <view class='order-info-title flex-display' >Number
       <view style='color:black;margin-left:10px'>WD100321342354351356</view>
     </view>
-    <view class='order-info-title flex-display' >订单时间
-      <view class="order-info-li">2017-10-10 14:51:25</view>
+    <view class='order-info-title flex-display' >Time  16：50
+      <view class="order-info-li">2019-09-30 14:51:25</view>
     </view>
   </view>
 
   <view style='margin-top:15px' class='go-center'>
-        <label class='note-exchange'>请凭此画面至取餐柜台领取饮料</label>
+        <label class='note-exchange'>Please</label>
   </view>
 </view>
